# zed-wikitext

./: .gitignore  Cargo.toml  README.wiki  REUSE.toml  extension.toml
languages/: config.toml
languages/wiki/: config.toml  highlights.scm
languages/wikitext/: highlights.scm
src/: wikitext.rs
